src/test/ui/mismatched_types/closure-mismatch.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `FnOnce<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 (),)>`, for some specific lifetime `'2`

error: aborting due to previous error

